Switch Struts app to use Aircraft EJB, get apps working in EAR project